--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^7.0.1",
     "nodemon": "^2.0.21",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+     "mongodb": "^5.7.0"
   }
 }
